# cgminer-rest

./: .travis.yml  Cargo.toml  README.md  Rocket.toml
.github/: dependabot.yml
src/: api.rs  main.rs  tests.rs
src/api/: cgminer.rs
