[package]
name = "cgminer-rest"
version = "0.1.2"
authors = ["Brenden Matthews <brenden@diddyinc.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "RESTful HTTP API wrapper for cgminer"

[dependencies]
rocket = "0.4"
bufstream = "0.1"
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
