[package]
name = "cgminer-rest"
version = "0.1.2"
authors = ["Brenden Matthews <brenden@diddyinc.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "RESTful HTTP API wrapper for cgminer"
repository = "https://github.com/brndnmtthws/cgminer-rest"
readme = "README.md"
keywords = ["cgminer", "restful", "rest-api"]
categories = ["api-bindings"]

[badges]
travis-ci = { repository = "brndnmtthws/cgminer-rest", branch = "master" }

[dependencies]
rocket = "0.4"
bufstream = "0.1"
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]
